--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,8 +20,8 @@
         </div>
     </blockquote>
     <div class="layui-btn-container">
-        <a class="layui-btn" href="/imgToPdf">图片转pdf</a>
-        <button class="layui-btn layui-btn-normal">当前日期</button>
+        <a class="layui-btn" href="/imgToPdf">图片转PDF</a>
+        <button class="layui-btn layui-btn-normal">Word转PDF</button>
     </div>
 </div>
 
