--- a/src/main/resources/templates/imgToPdf.html
+++ b/src/main/resources/templates/imgToPdf.html
@@ -30,6 +30,7 @@
 
 <!-- 引入 layui.js 的 <script> 标签最好放置在 html 末尾 -->
 <script th:src="@{/layui/layui.js}"></script>
+<script th:src="@{/cropper/croppers.js}"></script>
 <script data-th-inline="javascript" type="text/javascript">
     layui.use(['upload', 'layer'], function () {
         var layer = layui.layer,
