--- a/src/main/resources/templates/imgToPdf.html
+++ b/src/main/resources/templates/imgToPdf.html
@@ -65,7 +65,7 @@
         })
 
         $("#download").on('click', function () {
-            window.location.href = '/pdf/toZip?id=' + id;
+            window.location.href = '/pdf/toPdf?id=' + id;
         })
 
         function guid() {
